# ComputerSecurity

./: .gitignore~HEAD
CHAT_DES/: CMakeLists.txt  a.out  client.cpp  des.cpp  des.h  des.h.gch  main.cpp  make.sh  readme.md  server.cpp  server.h
CHAT_DES/rsa/: a.out  main.cpp  main.h
Chat_system_DES/Chat_system_DES/: des.cpp  des.h  init.cpp  main.cpp  main.h  server.cpp  server.hpp
Chat_system_DES/Chat_system_DES.xcodeproj/: project.pbxproj
Chat_system_DES/Chat_system_DES.xcodeproj/project.xcworkspace/xcuserdata/lee.xcuserdatad/: UserInterfaceState.xcuserstate
Chat_system_DES/Chat_system_DES.xcodeproj/xcshareddata/xcschemes/: Chat_system_DES.xcscheme
Chat_system_DES/Chat_system_DES.xcodeproj/xcuserdata/lee.xcuserdatad/xcschemes/: xcschememanagement.plist
Chat_system_DES/Server/: main.cpp
DES/: a.out  main.cpp
DES_CBC/: a.out  main.cpp
chat_rsa/: .prettierrc.json  next.config.js  package-lock.json  package.json
chat_rsa/app/: layout.tsx  page.tsx
chat_rsa/app/chat/: page.tsx
chat_rsa/app/chat/components/: msgBox.tsx
chat_rsa/app/chat/utils/: rsa.ts
chat_rsa/app/components/: socketProvider.tsx
chat_rsa/pages/: type.d.ts
chat_rsa/pages/api/chat/: index.ts
chat_rsa/pages/api/keygen/: index.ts
chat_rsa/pages/api/rsa/: index.ts
chat_rsa/pages/api/socket/: io.ts
main/main/: main.cpp
main/main.xcodeproj/: project.pbxproj
main/main.xcodeproj/project.xcworkspace/xcuserdata/lee.xcuserdatad/: UserInterfaceState.xcuserstate
main/main.xcodeproj/xcuserdata/lee.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
